@@ -13,3 +13,4 @@ Release notes for Version 1.24 (Sept 2015 -- )
 - added sqlite3 binary to Android Version (make sqldemo.bas work again)
 - added gfalist binary to Android Version (see gfalist.bas)
 - fixed subarry assignment
+- improved DUMP, added DUMP c$,#n, also PLIST #n
